# LADS

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: create_event_video.py
src/event_lads/: LADS.py  __init__.py  recursive_patches.py
src/lads/: LADS.py  __init__.py  events_utils.py  leaky_integrator.py  recursive_patches.py
